--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ dependencies = [
     "datasets>=3.2.0",
     "httpx>=0.28.1",
     "pandas-stubs>=2.2.3.241126",
+    "protobuf>=5.29.3",
     "rich>=13.9.4",
     "scikit-learn>=1.6.1",
     "scipy-stubs>=1.15.1.0",
