--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [project]
 dependencies = [
+    "anyio>=4.8.0",
     "beautifulsoup4>=4.13.3",
     "blobfile>=3.0.0",
     "datasets>=3.2.0",
+    "fastapi[standard]>=0.115.10",
     "httpx>=0.28.1",
     "pandas-stubs>=2.2.3.241126",
     "protobuf>=5.29.3",
@@ -14,7 +16,6 @@ dependencies = [
     "tiktoken>=0.8.0",
     "torch>=2.6.0",
     "transformers[torch]>=4.48.3",
-    "trio>=0.28.0",
 ]
 description = "WWT loves ML"
 name = "wwt-stuff"
@@ -27,6 +28,10 @@ dev = [
     "basedpyright>=1.27.0",
     "ruff>=0.9.6",
 ]
+
+[build-system]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
 
 [tool.ruff]
 preview = true
